--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+    opacity: 0.7;
   }
   
   /* Add some content at the bottom of the video/page */
