--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
-    position: fixed;
+    position: absolute;
     right: 0;
     bottom: 0;
     min-width: 100%;
@@ -10,7 +10,7 @@
   
   /* Add some content at the bottom of the video/page */
   .content {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
