--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,8 @@ body {
     background: #ddd;
     color: black;
   }
+
+  section {
+    background: linear-gradient(to right, transparent 50%, #fff 50%), url('https://images.pexels.com/photos/731082/pexels-photo-731082.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') no-repeat center;
+    background-size: cover;
+}
