rearranged layout and photos

--- a/css/conservation.css
+++ b/css/conservation.css
@@ -23,7 +23,7 @@
 }
 
 .leftside {
-    background: url(/images/IMG_1282.jpeg) no-repeat;
+    background: url(/images/DSC_1318.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     height: 100Vh;
@@ -39,7 +39,7 @@
     display: block;
   }
   .rightside {
-    background: url(/images/IMG_3233.jpeg) no-repeat;
+    background: url(/images/DSC_1290.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     height: 100Vh;
