--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ body {
   top: 0;
   left: -5%;
   transition: all 0.3s;
-  background-image: url(/images/jBkAo992Qra0KZhJjA76Jw_thumb_131b.jpg);
+  background-image: url(/images/DSC_1293.jpg);
 }
 
 .hover-1-content {
