--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   height: 3000px;
-  padding-top: 50px;
+  padding-top: 0px;
 }
 
 .banner {
@@ -11,7 +11,7 @@ body {
   right: 0;
   top: 0;
   height: 50px;
-  background: tomato;
+  background: white;
   text-align: center;
   transition: transform 300ms;
 }
@@ -90,169 +90,11 @@ bg-image2 {
 *
 */
 
-body {
-    min-height: 100vh;
-    background-color: #fff; 
-    color: #333;
-}
-.text-uppercase {
-  letter-spacing: .1em;
+.container-fluid {
+  margin: 0;
+  padding: 0;
 }
 
-.custom-scrollbar-js,
-.custom-scrollbar-css {
-  height: 200px;
-}
-
-
-/* Custom Scrollbar using CSS */
-.custom-scrollbar-css {
-  overflow-y: scroll;
-}
-
-/* scrollbar width */
-.custom-scrollbar-css::-webkit-scrollbar {
-  width: 5px;
-}
-
-/* scrollbar track */
-.custom-scrollbar-css::-webkit-scrollbar-track {
-  background: #eee;
-}
-
-/* scrollbar handle */
-.custom-scrollbar-css::-webkit-scrollbar-thumb {
-  border-radius: 1rem;
-  background-color: white;
-  background-image: linear-gradient(to top, whitesmoke 0%, grey 100%);
-}
-
-
-
-
-/*
-*
-* ==========================================
-* FOR DEMO PURPOSES
-* ==========================================
-*
-*/
-
-code {
-  padding: 0 0.15rem;
-  background: #f5f5f5;
-  border-radius: 0.2rem;
-}
-
-/*
-*
-* ==========================================
-* FOR DEMO PURPOSES
-* ==========================================
-*
-*/
-body {
-  min-height: 100vh;
-  background-color: white;
-}
-
-.hover {
-  overflow: hidden;
-  position: relative;
-  padding-bottom: 60%;
-}
-
-.hover-overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 90;
-  transition: all 0.4s;
-}
-
-.hover img {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all 0.3s;
-}
-
-.hover-content {
-  position: relative;
-  z-index: 99;
-}
-
-
-/* DEMO 1 ============================== */
-.hover-1 img {
-  width: 105%;
-  position: absolute;
-  top: 0;
-  left: -5%;
-  transition: all 0.3s;
-  background-image: url(/images/DSC_1293.jpg);
-}
-
-.hover-1-content {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 99;
-  transition: all 0.4s;
-}
-
-.hover-1 .hover-overlay {
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.hover-1-description {
-  transform: translateY(0.5rem);
-  transition: all 0.4s;
-  opacity: 0;
-}
-
-.hover-1:hover .hover-1-content {
-  bottom: 2rem;
-}
-
-.hover-1:hover .hover-1-description {
-  opacity: 1;
-  transform: none;
-}
-
-.hover-1:hover img {
-  left: 0;
-}
-
-.hover-1:hover .hover-overlay {
-  opacity: 0;
-}
-
-  * {
-    box-sizing: border-box;
-  }
   
-  /* Create two equal columns that floats next to each other */
-  .column img{
-    float: left;
-    width: 50%;
-    padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column img {
-      width: 100%;
-    }
-  }
+
+ 
