--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,11 @@ body {
   padding-top: 0px;
 }
 
-#slideset6 {height: 10em; position: relative}
+#slideset6 {
+  height: 10em; 
+  position: relative;
+  background-image: url(/images/DSC_1287.jpg);
+}
 
 #slideset6 > * {animation: 12s autoplay6 infinite linear;
   position: absolute; top: 0; left: 0; opacity: 0.0}
@@ -21,7 +25,7 @@ body {
   #slideset6 > *:nth-child(1) {animation-delay: 0s}
   #slideset6 > *:nth-child(2) {animation-delay: 4s}
   #slideset6 > *:nth-child(3) {animation-delay: 8s}
-  
+
 .banner {
   position: fixed;
   left: 0;
