--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,15 @@ body {
   padding-top: 0px;
 }
 
-.carousel-inner  > * {animation: 12s autoplay6 infinite linear;
-  position: absolute; top: 0; left: 0; opacity: 0.0}
 
-  .carousel-inner > *:nth-child(1) {animation-delay: 0s}
-  .carousel-inner > *:nth-child(2) {animation-delay: 4s}
-  .carousel-inner > *:nth-child(3) {animation-delay: 8s}
+.carousel-item {
+  height: 50em; 
+  position: relative;
+}
 
-
-#slideset6 {
+#slideset6{
   height: 10em; 
   position: relative;
-  background-image: url(/images/DSC_1287.jpg);
 }
 
 #slideset6 > * {animation: 12s autoplay6 infinite linear;
