--- a/css/style.css
+++ b/css/style.css
@@ -5,31 +5,41 @@ body {
   padding-top: 0px;
 }
 
+.carousel-fade .carousel-item {
+  display: block;
+  position: absolute;
+  opacity: 0;
+  transition: opacity 0.75s ease-in-out;
+}
+.carousel-fade .carousel-item.active {
+  opacity: 1;
+}
 
+html,
+body,
+.carousel,
+.carousel-inner,
 .carousel-item {
-  height: 50em; 
-  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
-#slideset6{
-  height: 10em; 
-  position: relative;
+.carousel {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-#slideset6 > * {animation: 12s autoplay6 infinite linear;
-  position: absolute; top: 0; left: 0; opacity: 0.0}
+.carousel-item:nth-child(1) {
+  opacity: 0.8 ;
+}
+.carousel-item:nth-child(2) {
+  opacity: 0.8 ;
+}
+.carousel-item:nth-child(3) {
+  opacity: 0.8 ;
+}
 
-  @keyframes autoplay6 {
-    0% {opacity: 0.0}
-    4% {opacity: 1.0}
-    33.33% {opacity: 1.0}
-    37.33% {opacity: 0.0}
-    100% {opacity: 0.0}
-  }
-
-  #slideset6 > *:nth-child(1) {animation-delay: 0s}
-  #slideset6 > *:nth-child(2) {animation-delay: 4s}
-  #slideset6 > *:nth-child(3) {animation-delay: 8s}
 
 .banner {
   position: fixed;
